--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.2"
+    "mongoose": "^8.1.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.9"
   }
 }
